--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
     image: apache/nifi:latest
     container_name: nifi_docker
     ports:
-      - 8050:8080
-      - 8051:8081
+      - 8080:8080
+      - 8081:8081
     environment:
       - NIFI_WEB_HTTP_PORT=8080
       - NIFI_CLUSTER_IS_NODE=true
@@ -36,7 +36,7 @@ services:
 
     environment:
       JUPYTER_ENABLE_LAB: "yes"
-      JUPYTER_TOKEN : "psut2021"
+      JUPYTER_TOKEN : "psut"
 
     ports:
       - 8880:8888
